Fixed COR upload logic in register.js

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "react-native-screens": "^4.1.0",
     "react-native-snackbar": "^2.8.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~16.0.3"
+    "react-native-web": "~0.19.10"
+    
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
