--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.3",
     "react-native-image-picker": "^7.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
@@ -32,7 +32,6 @@
     "react-native-snackbar": "^2.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10"
-    
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
