--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-image-picker": "^7.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
     "react-native-snackbar": "^2.8.0",
