--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.46.2",
     "expo": "^52.0.11",
     "expo-document-picker": "^13.0.1",
+    "expo-file-system": "^18.0.5",
     "expo-font": "~13.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
@@ -24,7 +26,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.3",
-    "react-native-image-picker": "^7.2.2",
+    "react-native-image-crop-picker": "^0.41.6",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-radio-buttons-group": "^3.1.0",
